file(GLOB SOURCES "src/*.cpp")

include_directories(./include)
get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
#foreach(dir ${dirs})
#  message(STATUS "dir='${dir}'")
#endforeach()

#set ( H5_LIBS libhdf5_cpp.a libhdf5.a libsz.a)
#set ( PB_LIBS libprotobuf-lite.a)
#set ( FS_LIBS libstdc++fs.a)
add_library(cytolib SHARED IMPORTED)
set_property(TARGET cytolib PROPERTY IMPORTED_LOCATION ${CYTOLIB_PATH}/lib/libcytolib.so)
add_executable(fcstool ${SOURCES} $<TARGET_OBJECTS:gs_pb_lib>)
add_dependencies( fcstool h5libs pblibs)
#foreach(dir ${LIBS})
#  message(STATUS "${dir}")
#endforeach()
target_link_libraries(fcstool cytolib ${LIBS} )
install(TARGETS fcstool DESTINATION /usr/local/bin)
